--- a/src/views/index.html
+++ b/src/views/index.html
@@ -56,5 +56,47 @@
                 </div>
             </div>
         </div>
+        <div class="page-stats">
+            <div class="wrap">
+                <div class="block-stats">
+                    <div class="block-stats-item">
+                        <div class="block-stats-item__img-1"></div>
+                        <div class="block-stats-item__title">
+                            <h4>Manage Your Workflow</h4>
+                        </div>
+                        <div class="block-stats-item__text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="block-stats-item__button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                    <div class="block-stats-item">
+                        <div class="block-stats-item__img-2"></div>
+                        <div class="block-stats-item__title">
+                            <h4>Analytics & Insights</h4>
+                        </div>
+                        <div class="block-stats-item__text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="block-stats-item__button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                    <div class="block-stats-item">
+                        <div class="block-stats-item__img-3"></div>
+                        <div class="block-stats-item__title">
+                            <h4>Organize Your Deadlines</h4>
+                        </div>
+                        <div class="block-stats-item__text">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="block-stats-item__button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                </div> 
+            </div>
+        </div>
     </body>
 </html>
