--- a/src/views/index.html
+++ b/src/views/index.html
@@ -59,7 +59,7 @@
         <div class="page-stats">
             <div class="wrap">
                 <div class="block-stats">
-                    <div class="block-stats-item">
+                    <div class="block-stats-item line">
                         <div class="block-stats-item__img-1"></div>
                         <div class="block-stats-item__title">
                             <h4>Manage Your Workflow</h4>
@@ -71,7 +71,7 @@
                             <a href="#">See more</a>
                         </div>
                     </div>
-                    <div class="block-stats-item">
+                    <div class="block-stats-item line">
                         <div class="block-stats-item__img-2"></div>
                         <div class="block-stats-item__title">
                             <h4>Analytics & Insights</h4>
@@ -96,6 +96,24 @@
                         </div>
                     </div>
                 </div> 
+            </div>
+        </div>
+        <div class="page-view">
+            <div class="wrap">
+                <div class="block-view">
+                    <div class="block-view-desc">
+                        <h2>All You need is a browser!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="block-view-item">
+                            <ul class="block-view-item__list">
+                                <li>Lorem ipsum dolor sit amet consectetur</li>
+                                <li>Ut enim ad minim veniam quis nostrud</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="block-view-img"></div>
+                </div>
             </div>
         </div>
     </body>
