--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -129,6 +129,8 @@ p {
 .block-stats {
     display: flex;
     justify-content: space-between;
+    max-width: 1473px;
+    margin: 0 auto;
     &-item {
         flex-basis: 33.333%;
         text-align: center;
@@ -139,7 +141,7 @@ p {
             background: url(../img/svg/icon-1.svg) no-repeat;
             width: 80px;
             height: 76px;
-            margin: 0 auto 58px;
+            margin: 0 auto 59px;
         }
         &__img-2 {
             background: url(../img/svg/icon-2.svg) no-repeat;
@@ -151,7 +153,7 @@ p {
             background: url(../img/svg/icon-3.svg) no-repeat;
             width: 80px;
             height: 80px;
-            margin: 0px auto 55px;
+            margin: 0px auto 57px;
         }
         &__text {
             width: 365px;
@@ -159,6 +161,67 @@ p {
             letter-spacing: 0.4px;
             line-height: 30px;
             margin-top: 21px;
+        }
+        &__button {
+            margin: 46px auto 0;
+            padding: 15px 76px;
+            border-radius: 50px;
+            border: 1px solid rgba(132, 146, 175, 0.3);
+            display: block;
+            width: 100px;
+            & a {
+                text-decoration: none;
+                color: #0e1a35;
+                font-weight: 700;
+                letter-spacing: 0.5px;
+            }
+        }
+    }
+}
+.line:before {
+    content: "";
+    border: 1px solid rgba(132, 146, 175, 0.3);
+    width: 220px;
+    display: block;
+    position: relative;
+    top: 39px;
+    left: 378px;
+}
+.page-view {
+    margin-top: 100px;
+}
+.block-view {
+    display: flex;
+    justify-content: space-between;
+    &-desc {
+        
+    }
+    &-img {
+        background: url(../img/view.png);
+        width: 1306px;
+        height: 667px;
+    }
+    &-item {
+        &__list {
+            &>li {
+                position: relative;
+                list-style-type: none;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/check.svg) no-repeat;
+                    width: 28px;
+                    height: 28px;
+                }
+                /*
+                &::after {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/check.svg);
+                    width: 28px;
+                    height: 28px;
+                }*/
+            }
         }
     }
 }
