--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -189,38 +189,52 @@ p {
 }
 .page-view {
     margin-top: 100px;
+    background-color: #ef78;
+    padding-top: 100px;
+    padding-bottom: 100px;  
 }
 .block-view {
-    display: flex;
-    justify-content: space-between;
+    margin-top: 20px;
     &-desc {
-        
+        top: 70px;
+        left: 168px;
+        & h2 {
+            margin-bottom: 40px;
+        }
+        & p {
+            max-width: 585px;
+            line-height: 29px;
+        }
+        & :nth-child(3) {
+            margin-top: 32px;
+            margin-bottom: 42px;
+        }
     }
     &-img {
-        background: url(../img/view.png);
-        width: 1306px;
+        background: url(../img/view.png) no-repeat;
+        width: 1046px;
         height: 667px;
+        right: 0;
+        top: 0;
     }
     &-item {
         &__list {
             &>li {
                 position: relative;
                 list-style-type: none;
-                &::after {
+                padding-left: 47px;
+                font-size: 22px;
+                line-height: 60px;
+                color: $accent-color;
+                &::before {
                     content: "";
                     position: absolute;
                     background: url(../img/svg/check.svg) no-repeat;
                     width: 28px;
                     height: 28px;
+                    left: 2px;
+                    top: 15px;
                 }
-                /*
-                &::after {
-                    content: "";
-                    position: absolute;
-                    background: url(../img/svg/check.svg);
-                    width: 28px;
-                    height: 28px;
-                }*/
             }
         }
     }
