--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -189,15 +189,17 @@ p {
 }
 .page-view {
     margin-top: 100px;
-    background-color: #ef78;
+    background-color: #f5f9ff;
     padding-top: 100px;
-    padding-bottom: 100px;  
+    padding-bottom: 79px;
 }
 .block-view {
-    margin-top: 20px;
+    margin-top: 17px;
+    display: flex;
+    justify-content: space-between;
     &-desc {
-        top: 70px;
-        left: 168px;
+        margin-left: 216px;
+        margin-top: 70px;
         & h2 {
             margin-bottom: 40px;
         }
@@ -211,11 +213,10 @@ p {
         }
     }
     &-img {
-        background: url(../img/view.png) no-repeat;
-        width: 1046px;
-        height: 667px;
-        right: 0;
-        top: 0;
+        width: 997px;
+        & img {
+            width: 997px;
+        }
     }
     &-item {
         &__list {
@@ -236,6 +237,165 @@ p {
                     top: 15px;
                 }
             }
+        }
+    }
+}
+.page-progress {
+    background: url(../img/bg-2.jpg) no-repeat;
+    background-size: cover;
+    height: 750px;
+}
+.block-progress {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 100px;
+    &__item {
+        display: flex;
+        justify-content: space-between;
+        & li {
+            position: relative;
+            padding: 30px 149px 30px 92px;
+            background-color: #fff;
+            margin-top: 14px;
+            letter-spacing: 0.68px;
+            font-weight: 500;
+            font-size: 16px;
+            &::before {
+                content: "";
+                position: absolute;
+                background: url(../img/svg/circle-1.svg) no-repeat;
+                width: 56px;
+                height: 41px;
+                left: 30px;
+            }
+            &::after {
+                content: "";
+                position: absolute;
+                background: url(../img/svg/dot.svg) no-repeat;
+                width: 6px;
+                height: 28px;
+                right: 28px;
+                top: 40%;
+            }
+            & span {
+                display: block;
+                font-size: 11px;
+                letter-spacing: 0.24px;
+                color: #8492af;
+                margin-top: 8px;
+                margin-left: 21px;
+            }
+            
+        }
+        & ul {
+            list-style-type: none;
+        }
+        & h4 {
+            font-size: 30px;
+            color: #fff;
+            font-weight: 500;
+            margin-bottom: 30px;
+            & span {
+                color: #8492af;
+            }
+        }
+        &_progress {
+            & li:nth-child(2) {
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/circle-2.svg) no-repeat;
+                    width: 41px;
+                    height: 41px;
+                    left: 30px;
+                }
+            }
+            & li:nth-child(3) {
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/circle-3.svg) no-repeat;
+                    width: 41px;
+                    height: 41px;
+                    left: 30px;
+                }
+            }
+            & li span::before {
+                content: "";
+                position: absolute;
+                background: url(../img/svg/clock.svg) no-repeat;
+                width: 14px;
+                height: 14px;
+                left: 91px;
+                bottom: 30px;
+            }
+            & li:nth-child(3) {
+                & span {
+                    color: #f83c7b;
+                }
+                & span::before {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/clock-red.svg) no-repeat;
+                    width: 14px;
+                    height: 14px;
+                    left: 91px;
+                    bottom: 30px;
+                }
+            }
+                
+        }
+        &_completed {
+            margin-left: 52px;
+            & li {
+                padding: 30px 103px 30px 91px;
+                & span {
+                    color: #0ec328;
+                }
+            }
+            & li:nth-child(1) {
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/circle-4.svg) no-repeat;
+                    width: 41px;
+                    height: 41px;
+                    left: 30px;
+                }
+            }
+            & li:nth-child(2) {
+                &::before {
+                    content: "";
+                    position: absolute;
+                    background: url(../img/svg/circle-5.svg) no-repeat;
+                    width: 41px;
+                    height: 41px;
+                    left: 30px;
+                }
+            }
+            & li span::before {
+                content: "";
+                position: absolute;
+                background: url(../img/svg/check-green.svg) no-repeat;
+                width: 14px;
+                height: 14px;
+                left: 91px;
+                bottom: 30px;
+            }
+        }
+    }
+    &__desc {
+        width: 701px;
+        & h2 {
+            color: #fff;
+            margin-bottom: 40px;
+        }
+        & p {
+            line-height: 29px;
+            width: 516px;
+        }
+        & p:nth-child(3) {
+            margin-top: 32px;
         }
     }
 }
