--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,500,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/5cd1ac997b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles/main.css">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -99,20 +99,50 @@
             </div>
         </div>
         <div class="page-view">
+            <div class="block-view">
+                <div class="block-view-desc">
+                    <h2>All You need is a browser!</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div class="block-view-item">
+                        <ul class="block-view-item__list">
+                            <li>Lorem ipsum dolor sit amet consectetur</li>
+                            <li>Ut enim ad minim veniam quis nostrud</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="block-view-img">
+                    <img src="../img/view.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="page-progress">
             <div class="wrap">
-                <div class="block-view">
-                    <div class="block-view-desc">
-                        <h2>All You need is a browser!</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <div class="block-view-item">
-                            <ul class="block-view-item__list">
-                                <li>Lorem ipsum dolor sit amet consectetur</li>
-                                <li>Ut enim ad minim veniam quis nostrud</li>
+                <div class="block-progress">
+                    <div class="block-progress__item">
+                        <div class="block-progress__item_progress">
+                            <h4>In Progress <span>(3)</span></h4>
+                            <ul>
+                                <li>New logo for Apple<span>1 day left</span></li>
+                                <li>Daily UI Kit<span>5 days left</span></li>
+                                <li>Business Cards<span>2 days delays</span></li>
+                            </ul>
+                        </div>
+                        <div class="block-progress__item_completed">
+                            <h4>Completed <span>(2)</span></h4>
+                            <ul>
+                                <li>Free PSD Template vol. 1<span>Completed!</span></li>
+                                <li>Iconset vol. 1<span>Completed!</span></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="block-view-img"></div>
+                    <div class="block-progress__desc">
+                        <h2>Drag & Drop</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <a class="block-progress__desc_left"></a>
+                        <a class="block-progress__desc_right"></a>
+                    </div>
                 </div>
             </div>
         </div>
