--- a/src/views/index.html
+++ b/src/views/index.html
@@ -140,11 +140,100 @@
                         <h2>Drag & Drop</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                        <a class="block-progress__desc_left"></a>
-                        <a class="block-progress__desc_right"></a>
+                        <div class="block-progress__desc_button">
+                            <a href="#" class="block-progress__desc_button-left"><img src="../img/Arrow-left.png" alt=""></a>
+                            <a href="#"  class="block-progress__desc_button-right"><img src="../img/Arrow-right.png" alt=""></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="page-powerfull">
+            <div class="wrap">
+                <div class="block-powerfull">
+                    <h2>Powerfull PSD Template</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <div class="block-powerfull__img">
+                        <img src="../img/mockup.png" alt="">
+                        <div class="block-powerfull__img--desc-1">
+                            <h4>Clean & modern layout</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                        </div>
+                        <div class="block-powerfull__img--desc-2">
+                            <h4>Easy to customize</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="page-price">
+            <div class="wrap">
+                <div class="block-price">
+                    <h2>Check our pricing!</h2>
+                    <div class="block-price__item">
+                        <div class="block-price__item_plan">
+                            <h4>BRONZE PLAN</h4>
+                            <p class="block-price__item_plan--cost"><span>$</span>19<span>/mon</span></p>
+                            <div class="block-price__item_plan--desc">
+                                <ul>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="cross">Lorem ipsum dolor sit am</li>
+                                    <li class="cross">Lorem ipsum dolor sit am</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="block-price__item_plan">
+                            <h4>SILVER PLAN</h4>
+                            <p class="block-price__item_plan--cost"><span>$</span>49<span>/mon</span></p>
+                            <div class="block-price__item_plan--desc">
+                                <ul>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="cross">Lorem ipsum dolor sit am</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="block-price__item_plan">
+                            <h4>GOLD PLAN</h4>
+                            <p class="block-price__item_plan--cost"><span>$</span>99<span>/mon</span></p>
+                            <div class="block-price__item_plan--desc">
+                                <ul>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                    <li class="check">Lorem ipsum dolor sit am</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="block-price__desc">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+                        <a href="#">Join now!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="page-footer">
+            <div class="wrap">
+                <div class="block-footer">
+                    <div class="block-footer__copy">
+                        <p>© 2016 Merkury All Right Reserved</p>  
+                    </div>
+                    <div class="block-footer__menu">
+                        <p>Pricing</p>
+                        <p>Blog</p>
+                        <p>Contact</p>
+                        <div class="block-footer__menu--social">
+                            <a href="#"><img src="../img/svg/facebook.svg" width="9" height="17" alt=""></a>
+                            <a href="#"><img src="../img/svg/twitter.svg" width="18" height="16" alt=""></a>
+                            <a href="#"><img src="../img/svg/google.svg" width="18" height="18" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
