--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,6 +38,8 @@ p {
 .wrap {
     max-width: 1710px;
     margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .page-main {
@@ -191,7 +193,7 @@ p {
     margin-top: 100px;
     background-color: #f5f9ff;
     padding-top: 100px;
-    padding-bottom: 79px;
+    padding-bottom: 112px;
 }
 .block-view {
     margin-top: 17px;
@@ -213,9 +215,15 @@ p {
         }
     }
     &-img {
-        width: 997px;
+        width: 999px;
+        @media(max-width: 1870px) {
+            width: 800px;
+        }
         & img {
-            width: 997px;
+            width: 999px;
+            @media(max-width: 1870px) {
+                width: 800px;
+            }
         }
     }
     &-item {
@@ -248,7 +256,7 @@ p {
 .block-progress {
     display: flex;
     justify-content: space-between;
-    padding-top: 100px;
+    padding-top: 158px;
     &__item {
         display: flex;
         justify-content: space-between;
@@ -385,7 +393,8 @@ p {
         }
     }
     &__desc {
-        width: 701px;
+        width: 702px;
+        margin-top: 53px;
         & h2 {
             color: #fff;
             margin-bottom: 40px;
@@ -396,6 +405,197 @@ p {
         }
         & p:nth-child(3) {
             margin-top: 32px;
+        }
+        &_button {
+            margin-top: 49px;
+            margin-left: 7px;
+            &-right {
+                margin-left: 15px;
+            }
+        }
+    }
+}
+.page-powerfull {
+    background-color: #f6f7fa;
+}
+.block-powerfull {
+    padding-top: 94px;
+    text-align: center;
+    & p {
+        width: 996px;
+        margin: 40px auto 0;
+        line-height: 30px;
+    }
+    &__img {
+        position: relative;
+        margin-top: 82px;
+        & p {
+            width: 236px;
+            letter-spacing: 0.38px;
+            margin-left: 0;
+        }
+        & h4 {
+            letter-spacing: 0.45px;
+        }
+        &--desc-1 {
+            position: absolute;
+            top: 86px;
+            left: 164px;
+            text-align: left;
+            
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                background-image: url(../img/svg/strips-left.svg);
+                width: 669px;
+                height: 46px;
+                top: 20px;
+            }
+        }
+        &--desc-2 {
+            position: absolute;
+            bottom: 148px;
+            right: 158px;
+            text-align: right;        
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                background-image: url(../img/svg/strips-right.svg);
+                width: 669px;
+                height: 46px;
+                top: 20px;
+                right: 0;
+            }
+        }
+    }
+}
+.page-price {
+    background-color: #fff;
+    margin-top: 115px;
+}
+.block-price {
+    text-align: center;
+    &__item {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 89px;
+        margin: 89px auto 0;
+        max-width: 1500px;
+        &_plan {
+            padding: 44px 60px 36px 59px;
+            background-color: #fff;
+            box-shadow: 0 0 23px 3px #e6e6e6;
+            & h4 {
+                font-weight: 400;
+                letter-spacing: 0.45px;
+            }
+            &--cost {
+                margin: 38px 13px 31px 30px;
+                font-size: 72px;
+                font-weight: 700;
+                color: #0e1a35;
+                letter-spacing: 0.65px;
+                & span:first-child {
+                    font-size: 40px;
+                }
+                & span:last-child {
+                    font-size: 24px;
+                    font-weight: 400;
+                    color: #8492af;
+                    margin-left: 3px;
+                }
+            }
+            &--desc {
+                line-height: 41px;
+                & li {
+                    list-style-type: none;
+                    letter-spacing: 0.3px;
+                    padding-left: 30px;
+                    position: relative;
+                    color: #8492af;
+                }
+            }
+        }
+    }
+    &__desc {
+        width: 900px;
+        margin: 106px auto 0;
+        line-height: 30px;
+        position: relative;
+        & p {
+            margin-bottom: 70px;
+        }
+        & a {
+            margin-top: 10px;
+            padding: 13px 61px 13px;
+            background-color: #5584ff;
+            border-radius: 54px;
+            font-weight: 700;
+            text-decoration: none;
+            color: #fff;
+            letter-spacing: 0.45px;
+            &::before {
+                content: "";
+                position: absolute;
+                border: 0.5px solid #dadee7;
+                width: 225px;
+                top: 89%;
+                left: 91px;
+            }
+            &::after {
+                content: "";
+                position: absolute;
+                border: 0.5px solid #dadee7;
+                width: 225px;
+                top: 89%;
+                right: 91px;
+            }
+        }
+    }
+}
+.cross::before {
+    content: "";
+    position: absolute;
+    background-image: url(../img/svg/cross.svg);
+    background-repeat: no-repeat;
+    width: 24px;
+    height: 24px;
+    top: 22%;
+    left: -7px;
+}
+.check::before {
+    content: "";
+    position: absolute;
+    background-image: url(../img/svg/check.svg);
+    background-repeat: no-repeat;
+    width: 24px;
+    height: 24px;
+    top: 22%;
+    left: -7px;
+}
+.page-footer {
+    background-color: #0e1a35;
+    margin-top: 113px;
+    & .wrap {
+        max-width: 1468px;
+    }
+}
+.block-footer {
+    display: flex;
+    justify-content: space-between;
+    height: 150px;
+    align-items: center;
+    &__menu {
+        display: flex;
+        width: 391px;
+        justify-content: space-between;
+        &--social {
+            width: 84px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 }
