--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,9 @@ body {
 h1 {
     font-size: 60px;
     font-weight: 100;
+    @media(max-width: 1024px) {
+        font-size: 47px;
+    }
 }
 
 h2 {
@@ -62,21 +65,47 @@ p {
 }
 
 .page-main {
-    background: url(../img/bg.png) no-repeat;
+    background-image: url(../img/bg.png);
+    background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     height: 1086px;
+    @media(max-width: 1024px) {
+        height: 992px;
+    }
+    @media(max-width: 950px) {
+        height: 889px;
+    }
+    @media(max-width: 900px) {
+        height: 795px;
+    }
+    @media(max-width: 800px) {
+        height: 785px;
+    }
+    @media(max-width: 767px) {
+        height: 903px;
+    }
 }
-
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 54px 15px 135px 15px;
+    @media(max-width: 1024px) {
+        padding: 54px 15px 90px 15px;
+    }
+    @media(max-width: 767px) {
+        flex-flow: column;
+        column-gap: 28px;
+    }
     &__logo {
         display: block;
         background-image: url(../img/Logo.svg);
         width: 233px;
         height: 65px;
+        @media(max-width: 767px) {
+            margin-bottom: 20px;
+        }
     }
     &__login {
         border: 1px solid #233a72;
@@ -100,6 +129,18 @@ p {
             color: #fff;
             margin-left: 49px;
             font-size: 18px;
+            @media(max-width: 1024px) {
+                margin-left: 40px;
+            }
+            @media(max-width: 950px) {
+                margin-left: 35px;
+            }
+            @media(max-width: 900px) {
+                margin-left: 25px;
+            }
+            @media(max-width: 800px) {
+                margin-left: 15px;
+            }
         }
     }
 }
@@ -113,12 +154,24 @@ p {
     &__title {
         color: #fff;
         margin-bottom: 96px;
+        @media(max-width: 1024px) {
+            margin-bottom: 70px;
+        }
+        @media(max-width: 767px) {
+            width: 407px;
+        }
         & span {
             display: block;
             font-size: 36px;
             font-weight: 400;
             color: #8492af;
             margin-top: 11px;
+            @media(max-width: 1024px) {
+                font-size: 25px;
+            }
+            @media(max-width: 767px) {
+                font-size: 20px;
+            }
         }
     }
     &__button {
@@ -136,15 +189,42 @@ p {
     &__dashboard {
         background-image: url(../img/dashboard.png);
         background-repeat: no-repeat;
-        width: 1080px;
+        background-position: center;
         height: 770px;
-        margin-top: 2px;
+        width: 1009px;
         z-index: 2;
+        @media(max-width: 1024px) {
+            background-size: 100%;
+            height: 794px;
+            width: 940px;
+        }
+        @media(max-width: 950px) {
+            background-size: 90%;
+            height: 649px;
+            width: 890px;
+        }
+        @media(max-width: 900px) {
+            background-size: 80%;
+            height: 536px;
+            width: 790px;
+        }
+        @media(max-width: 800px) {
+            background-size: 90%;
+            height: 513px;
+            width: 700px;
+        }
+        @media(max-width: 600px) {
+            background-size: 70%;
+            height: 445px;
+        }
     }
 }
 
 .page-stats {
     margin-top: 260px;
+    @media(max-width: 950px) {
+        margin-top: 150px;
+    }
 }
 
 .block-stats {
@@ -374,6 +454,12 @@ p {
         background-position: center;
         height: 850px;
     }
+    @media(max-width: 1600px) {
+        height: 1130px;
+    }
+    @media(max-width: 500px) {
+        height: 1000px;
+    }
 }
 .block-progress {
     display: flex;
@@ -387,6 +473,11 @@ p {
     &__item {
         display: flex;
         justify-content: space-between;
+        @media(max-width: 767px) {
+            padding-top: 0px;
+            flex-flow: column;
+            align-items: center;
+        }
         & li {
             position: relative;
             padding: 30px 149px 30px 92px;
@@ -395,6 +486,13 @@ p {
             letter-spacing: 0.68px;
             font-weight: 500;
             font-size: 16px;
+            @media(max-width: 767px) {
+                padding: 20px 70px 20px 87px;
+            }
+            @media(max-width: 400px) {
+                font-size: 13px;
+                padding: 20px 70px 20px 68px;
+            }
             &::before {
                 content: "";
                 position: absolute;
@@ -402,6 +500,10 @@ p {
                 width: 56px;
                 height: 41px;
                 left: 30px;
+                @media(max-width: 400px) {
+                    height: 35px;
+                    left: 15px;
+                }
             }
             &::after {
                 content: "";
@@ -411,6 +513,9 @@ p {
                 height: 28px;
                 right: 28px;
                 top: 40%;
+                @media(max-width: 400px) {
+                    top: 33%;
+                }
             }
             & span {
                 display: block;
@@ -420,16 +525,30 @@ p {
                 margin-top: 8px;
                 margin-left: 21px;
             }
-            
         }
         & ul {
             list-style-type: none;
+            @media(max-width: 500px) {
+                width: 353px;
+            }
+            @media(max-width: 400px) {
+                width: 300px;
+            }
         }
         & h4 {
             font-size: 30px;
             color: #fff;
             font-weight: 500;
             margin-bottom: 30px;
+            @media(max-width: 767px) {
+                margin-bottom: 15px;
+            }
+            @media(max-width: 767px) {
+                font-size: 20px;
+            }
+            @media(max-width: 400px) {
+                font-size: 18px;
+            }
             & span {
                 color: #8492af;
             }
@@ -443,6 +562,10 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
+                    @media(max-width: 400px) {
+                        height: 35px;
+                        left: 15px;
+                    }
                 }
             }
             & li:nth-child(3) {
@@ -453,6 +576,10 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
+                    @media(max-width: 400px) {
+                        height: 35px;
+                        left: 15px;
+                    }
                 }
             }
             & li span::before {
@@ -463,6 +590,14 @@ p {
                 height: 14px;
                 left: 91px;
                 bottom: 30px;
+                @media(max-width: 500px) {
+                    left: 25%;
+                    bottom: 26.5%;
+                }
+                @media(max-width: 500px) {
+                    left: 22.5%;
+                }
+
             }
             & li:nth-child(3) {
                 & span {
@@ -476,12 +611,23 @@ p {
                     height: 14px;
                     left: 91px;
                     bottom: 30px;
+                    @media(max-width: 500px) {
+                        left: 25%;
+                        bottom: 26.5%;
+                    }
+                    @media(max-width: 500px) {
+                        left: 22.5%;
+                    }
                 }
             }
                 
         }
         &_completed {
             margin-left: 52px;
+            @media(max-width: 767px) {
+                margin-left: 0px;
+                margin-top: 30px;
+            }
             & li {
                 padding: 30px 103px 30px 91px;
                 & span {
@@ -496,6 +642,10 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
+                    @media(max-width: 400px) {
+                        height: 35px;
+                        left: 15px;
+                    }
                 }
             }
             & li:nth-child(2) {
@@ -506,6 +656,10 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
+                    @media(max-width: 400px) {
+                        height: 35px;
+                        left: 15px;
+                    }
                 }
             }
             & li span::before {
@@ -516,22 +670,45 @@ p {
                 height: 14px;
                 left: 91px;
                 bottom: 30px;
+                @media(max-width: 500px) {
+                    left: 25%;
+                    bottom: 26.5%;
+                }
+                @media(max-width: 500px) {
+                    left: 22.5%;
+                }
             }
         }
     }
     &__desc {
         width: 702px;
         margin-top: 53px;
+        @media(max-width: 767px) {
+            text-align: center;
+        }
         & h2 {
             color: #fff;
             margin-bottom: 40px;
+            @media(max-width: 400px) {
+                margin-bottom: 25px;
+            }
         }
         & p {
             line-height: 29px;
             width: 516px;
+            @media(max-width: 767px) {
+                width: 330px;
+                margin: 0 auto;
+            }
+            @media(max-width: 400px) {
+                width: 270px;
+            }
         }
         & p:nth-child(3) {
             margin-top: 32px;
+            @media(max-width: 767px) {
+                margin-top: 15px;
+            }
         }
         &_button {
             margin-top: 49px;
@@ -541,6 +718,9 @@ p {
             }
             @media(max-width: 1600px) {
                 margin: 0 0 43px 7px;
+            }
+            @media(max-width: 767px) {
+                margin: 15px 0 25px 0px;
             }
         }
     }
@@ -553,6 +733,15 @@ p {
     text-align: center;
     @media(max-width: 1380px) {
         padding-bottom: 50px;
+    }
+    @media(max-width: 460px) {
+        padding-top: 50px;
+    }
+    & h2 {
+        @media(max-width: 460px) {
+            display: inline-block;
+            width: 300px;
+        }
     }
     & p {
         width: 996px;
@@ -569,6 +758,11 @@ p {
         }
         @media(max-width: 460px) {
             width: 320px;
+            margin: 15px auto 0;
+            line-height: 22px;
+        }
+        @media(max-width: 414px) {
+            width: 300px;
             margin: 15px auto 0;
             line-height: 22px;
         }
@@ -614,6 +808,9 @@ p {
             @media(max-width: 600px) {
                 width: 320px;
             }
+            @media(max-width: 414px) {
+                width: 300px;
+            }
         }
         & p {
             @media(max-width: 1380px) {
@@ -652,6 +849,9 @@ p {
                 text-align: center;
                 margin: 0 auto;
             }
+            @media(max-width: 414px) {
+                width: 300px;
+            }
             &::after {
                 content: "";
                 display: block;
@@ -687,6 +887,9 @@ p {
                 width: 407px;
                 margin: 25px auto 0;
             }    
+            @media(max-width: 414px) {
+                width: 300px;
+            }
             &::after {
                 content: "";
                 display: block;
@@ -710,8 +913,11 @@ p {
 .page-price {
     background-color: #fff;
     margin-top: 115px;
-    @media(min-width: 1220px) {
+    @media(max-width: 1220px) {
         margin-top: 80px;
+    }
+    @media(max-width: 414px) {
+        margin-top: 40px;
     }
 }
 
@@ -726,12 +932,18 @@ p {
         @media(max-width: 1220px) {
             display: inline-block;
         }
+        @media(max-width: 460px) {
+            margin: 50px auto 0;
+        }
         &_plan {
             padding: 44px 60px 36px 59px;
             background-color: #fff;
             box-shadow: 0 0 23px 3px #e6e6e6;
             @media(max-width: 1220px) {
                 margin-bottom: 25px;
+            }
+            @media(max-width: 414px) {
+                padding: 30px;
             }
             & h4 {
                 font-weight: 400;
@@ -761,6 +973,9 @@ p {
                     padding-left: 30px;
                     position: relative;
                     color: #8492af;
+                    @media(max-width: 414px) {
+                        font-size: 12px;
+                    }
                 }
             }
         }
@@ -773,11 +988,35 @@ p {
         @media(max-width: 1220px) {
             margin: 30px auto;
         }
+        @media(max-width: 1100px) {
+            width: 800px;
+        }
+        @media(max-width: 900px) {
+            width: 789px;
+        }
+        @media(max-width: 800px) {
+            width: 450px;
+        }
+        @media(max-width: 500px) {
+            width: 350px;
+        }
+        @media(max-width: 414px) {
+            width: 300px;
+        }
         & p {
             margin-bottom: 70px;
             @media(max-width: 1220px) {
                 width: 600px;
                 margin: 30px auto;
+            }
+            @media(max-width: 800px) {
+                width: 450px;
+            }
+            @media(max-width: 500px) {
+                width: 346px;
+            }
+            @media(max-width: 414px) {
+                width: 276px;
             }
         }
         & a {
@@ -796,6 +1035,12 @@ p {
                 width: 225px;
                 top: 89%;
                 left: 91px;
+                @media(max-width: 1100px) {
+                    left: 45px;
+                }
+                @media(max-width: 900px) {
+                    display: none;
+                }
             }
             &::after {
                 content: "";
@@ -804,6 +1049,12 @@ p {
                 width: 225px;
                 top: 89%;
                 right: 91px;
+                @media(max-width: 1100px) {
+                    right: 45px;
+                }
+                @media(max-width: 900px) {
+                    display: none;
+                }
             }
         }
     }
@@ -817,6 +1068,12 @@ p {
     height: 24px;
     top: 22%;
     left: -7px;
+    @media(max-width: 414px) {
+        width: 20px;
+        height: 20px;
+        top: 24%;
+        left: 15px;
+    }
 }
 .check::before {
     content: "";
@@ -827,10 +1084,19 @@ p {
     height: 24px;
     top: 22%;
     left: -7px;
+    @media(max-width: 414px) {
+        width: 20px;
+        height: 20px;
+        top: 24%;
+        left: 15px;
+    }
 }
 .page-footer {
     background-color: #0e1a35;
     margin-top: 113px;
+    @media(max-width: 500px) {
+        margin-top: 70px;
+    }
     & .wrap {
         max-width: 1468px;
     }
@@ -843,9 +1109,7 @@ p {
     @media(max-width: 780px) {
         flex-flow: column;
         justify-content: center;
-    }
-    @media(max-width: 780px) {
-        height: 200px;
+        height: 250px;
     }
     &__menu {
         display: flex;
@@ -854,8 +1118,6 @@ p {
         @media(max-width: 780px) {
             flex-flow: column;
             justify-content: center;
-        }
-        @media(max-width: 430px) {
             width: 86px;
             margin: 0 auto;
             text-align: center;
