--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,6 +20,9 @@ h1 {
     @media(max-width: 1024px) {
         font-size: 47px;
     }
+    @media(max-width: 450px) {
+        font-size: 35px;
+    }
 }
 
 h2 {
@@ -83,7 +86,22 @@ p {
         height: 785px;
     }
     @media(max-width: 767px) {
-        height: 903px;
+        height: 630px;
+    }
+    @media(max-width: 600px) {
+        height: 575px;
+    }
+    @media(max-width: 516px) {
+        height: 500px;
+    }
+    @media(max-width: 450px) {
+        height: 576px;
+    }
+    @media(max-width: 450px) {
+        height: 556px;
+    }
+    @media(max-width: 450px) {
+        height: 413px;
     }
 }
 .header {
@@ -91,6 +109,7 @@ p {
     justify-content: space-between;
     align-items: center;
     padding: 54px 15px 135px 15px;
+    position: relative;
     @media(max-width: 1024px) {
         padding: 54px 15px 90px 15px;
     }
@@ -98,13 +117,30 @@ p {
         flex-flow: column;
         column-gap: 28px;
     }
+    @media(max-width: 600px) {
+        padding: 20px 15px 50px 15px;
+    }
+    @media(max-width: 600px) {
+        padding: 20px 15px 50px 15px;
+    }
+    @media(max-width: 516px) {
+        flex-flow: row nowrap;
+        height: 100%;
+        align-items: center;
+    }
     &__logo {
         display: block;
         background-image: url(../img/Logo.svg);
+        background-repeat: no-repeat;
         width: 233px;
         height: 65px;
         @media(max-width: 767px) {
             margin-bottom: 20px;
+        }
+        @media(max-width: 516px) {
+            margin-bottom: 0px;
+            width: 196px;
+            height: 46px;
         }
     }
     &__login {
@@ -112,6 +148,12 @@ p {
         padding: 14px 43px;
         border-radius: 35px;
         margin-left: 39px;
+        @media(max-width: 516px) {
+            display: block;
+            padding: 0;
+            border: none;
+            margin-left: 0px;
+        }
         &-item {
             color: $accent-color;
             text-decoration: none;
@@ -121,8 +163,6 @@ p {
 }
 
 .menu {
-    display: flex;
-    align-items: center;
     &__links {
         &-item {
             text-decoration: none;
@@ -143,7 +183,44 @@ p {
             }
         }
     }
+    &__burger {
+        cursor: pointer;
+        display: none;
+        width: 40px;
+        text-align: right;
+        position: absolute;
+        @media(max-width: 516px) {
+            display: inline-block;
+            right: 0;
+            top: 20%;
+        }
+    }
+    & .nav {
+        display: flex;
+        align-items: center;
+        @media(max-width: 516px) {
+            position: fixed;
+            display: none;
+            top: 0;
+            right: 0;
+            left: 0;
+            margin-top: 100px;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 1000;
+            overflow: auto;
+        }
+        & a {
+            @media(max-width: 516px) {
+                display: block;
+                float: none;
+                text-align: center;
+                margin: 20px auto;
+                top: 0;
+            }
+        }
+    }
 }
+
 
 .block-main {
     margin: 0 auto;
@@ -159,6 +236,13 @@ p {
         }
         @media(max-width: 767px) {
             width: 407px;
+        }
+        @media(max-width: 450px) {
+            width: 303px;
+            margin-bottom: 50px;
+        }
+        @media(max-width: 400px) {
+            margin-bottom: 65px;
         }
         & span {
             display: block;
@@ -211,11 +295,10 @@ p {
         @media(max-width: 800px) {
             background-size: 90%;
             height: 513px;
-            width: 700px;
+            width: 593px;
         }
-        @media(max-width: 600px) {
-            background-size: 70%;
-            height: 445px;
+        @media(max-width: 706px) {
+            display: none;
         }
     }
 }
@@ -223,7 +306,10 @@ p {
 .page-stats {
     margin-top: 260px;
     @media(max-width: 950px) {
-        margin-top: 150px;
+        margin-top: 100px;
+    }
+    @media(max-width: 400px) {
+        margin-top: 80px;
     }
 }
 
@@ -487,9 +573,6 @@ p {
             font-weight: 500;
             font-size: 16px;
             @media(max-width: 767px) {
-                padding: 20px 70px 20px 87px;
-            }
-            @media(max-width: 400px) {
                 font-size: 13px;
                 padding: 20px 70px 20px 68px;
             }
@@ -500,7 +583,7 @@ p {
                 width: 56px;
                 height: 41px;
                 left: 30px;
-                @media(max-width: 400px) {
+                @media(max-width: 767px) {
                     height: 35px;
                     left: 15px;
                 }
@@ -513,7 +596,7 @@ p {
                 height: 28px;
                 right: 28px;
                 top: 40%;
-                @media(max-width: 400px) {
+                @media(max-width: 767px) {
                     top: 33%;
                 }
             }
@@ -528,10 +611,7 @@ p {
         }
         & ul {
             list-style-type: none;
-            @media(max-width: 500px) {
-                width: 353px;
-            }
-            @media(max-width: 400px) {
+            @media(max-width: 767px) {
                 width: 300px;
             }
         }
@@ -562,7 +642,7 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
-                    @media(max-width: 400px) {
+                    @media(max-width: 767px) {
                         height: 35px;
                         left: 15px;
                     }
@@ -576,7 +656,7 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
-                    @media(max-width: 400px) {
+                    @media(max-width: 767px) {
                         height: 35px;
                         left: 15px;
                     }
@@ -590,14 +670,10 @@ p {
                 height: 14px;
                 left: 91px;
                 bottom: 30px;
-                @media(max-width: 500px) {
-                    left: 25%;
+                @media(max-width: 767px) {
+                    left: 22.5%;
                     bottom: 26.5%;
                 }
-                @media(max-width: 500px) {
-                    left: 22.5%;
-                }
-
             }
             & li:nth-child(3) {
                 & span {
@@ -611,12 +687,9 @@ p {
                     height: 14px;
                     left: 91px;
                     bottom: 30px;
-                    @media(max-width: 500px) {
-                        left: 25%;
-                        bottom: 26.5%;
-                    }
-                    @media(max-width: 500px) {
+                    @media(max-width: 767px) {
                         left: 22.5%;
+                        bottom: 26.5%;
                     }
                 }
             }
@@ -642,7 +715,7 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
-                    @media(max-width: 400px) {
+                    @media(max-width: 767px) {
                         height: 35px;
                         left: 15px;
                     }
@@ -656,7 +729,7 @@ p {
                     width: 41px;
                     height: 41px;
                     left: 30px;
-                    @media(max-width: 400px) {
+                    @media(max-width: 767px) {
                         height: 35px;
                         left: 15px;
                     }
@@ -670,12 +743,9 @@ p {
                 height: 14px;
                 left: 91px;
                 bottom: 30px;
-                @media(max-width: 500px) {
-                    left: 25%;
-                    bottom: 26.5%;
-                }
-                @media(max-width: 500px) {
+                @media(max-width: 767px) {
                     left: 22.5%;
+                    bottom: 26.5%;
                 }
             }
         }
@@ -685,6 +755,11 @@ p {
         margin-top: 53px;
         @media(max-width: 767px) {
             text-align: center;
+            width: 433px;
+        }
+        @media(max-width: 434px) {
+            text-align: center;
+            width: 320px;
         }
         & h2 {
             color: #fff;
