--- a/src/views/index.html
+++ b/src/views/index.html
@@ -35,15 +35,20 @@
                     <div class="header">
                         <a href="#" class="header__logo"></a>
                         <div class="menu">
-                            <nav class="menu__links">
-                                <a href="#" class="menu__links-item">Features</a>
-                                <a href="#" class="menu__links-item">Pricing</a>
-                                <a href="#" class="menu__links-item">Blog</a>
-                                <a href="#" class="menu__links-item">Contact</a>
-                            </nav>
-                            <div class="header__login">
-                                <a href="#" class="header__login-item">Login</a>
-                            </div> 
+                            <div class="menu__burger">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 786.5 898.9"><path d="M69.7 236h647.1c34.2 0 62-27.7 62-62 0-34.2-27.7-62-62-62H69.7c-34.2 0-62 27.7-62 62 .1 34.3 27.8 62 62 62zm145.9 275.4h514c27.2 0 49.2-27.7 49.2-62 0-34.2-22-62-49.2-62h-514c-27.2 0-49.2 27.7-49.2 62s22 62 49.2 62zM69.7 786.7h647.1c34.2 0 62-27.7 62-62 0-34.2-27.7-62-62-62H69.7c-34.2 0-62 27.7-62 62 .1 34.3 27.8 62 62 62z" fill="#fff"/></svg>
+                            </div>
+                            <div class="nav">
+                                <nav class="menu__links">
+                                    <a href="#" class="menu__links-item">Features</a>
+                                    <a href="#" class="menu__links-item">Pricing</a>
+                                    <a href="#" class="menu__links-item">Blog</a>
+                                    <a href="#" class="menu__links-item">Contact</a>
+                                </nav>
+                                <div class="header__login">
+                                    <a href="#" class="header__login-item">Login</a>
+                                </div> 
+                            </div>
                         </div>  
                     </div>
                 </header>
@@ -234,6 +239,27 @@
                     </div>
                 </div>
             </div>
+            <script src="../js/main.js"></script>
+            <script src="../js/vendor.js"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+            <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+            <script>
+                $(function(){
+	
+                    $('.menu__burger').on('click', function(){
+                        
+                        $('.nav').slideToggle(300, function(){
+                            
+                            if($(this).css('display') === 'none'){
+                                $(this).removeAttr('style');
+                        }
+                        
+                    });
+                    
+                });
+                    
+                });
+            </script>
         </footer>
     </body>
 </html>
