--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -144,10 +144,9 @@ p {
         }
     }
     &__login {
-        border: 1px solid #233a72;
-        padding: 14px 43px;
-        border-radius: 35px;
+        cursor: pointer;
         margin-left: 39px;
+        
         @media(max-width: 516px) {
             display: block;
             padding: 0;
@@ -155,9 +154,24 @@ p {
             margin-left: 0px;
         }
         &-item {
+            border: 1px solid #233a72;
+            padding: 14px 43px;
+            border-radius: 45px;
             color: $accent-color;
             text-decoration: none;
             font-size: 18px;
+            &:hover {
+                background-color: #5584ff;
+                color: #fff;
+                border: 1px solid #5584ff;
+                transition: 0.3s;
+            }
+            &:active {
+                background-color: #4470dd;
+                color: #fff;
+                border: 1px solid #4470dd;
+                transition: 0.3s;
+            }
         }
     }
 }
@@ -169,6 +183,15 @@ p {
             color: #fff;
             margin-left: 49px;
             font-size: 18px;
+            padding: 15px 0;
+            &:hover {
+                color: #5584ff;
+                transition: 0.3s;
+            }
+            &:active {
+                color: #4470dd;
+                transition: 0.3s;
+            }
             @media(max-width: 1024px) {
                 margin-left: 40px;
             }
@@ -268,6 +291,18 @@ p {
             border-radius: 35px;
             color: #fff;
             letter-spacing: 0.4px;
+            &:hover {
+                background-color: transparent;
+                color: #fff;
+                border: 1px solid #5584ff;
+                transition: 0.3s;
+            }
+            &:active {
+                background-color: #4470dd;
+                color: #fff;
+                border: 1px solid #4470dd;
+                transition: 0.3s;
+            }
         }
     }
     &__dashboard {
@@ -369,11 +404,7 @@ p {
         }
         &__button {
             margin: 46px auto 0;
-            padding: 15px 76px;
-            border-radius: 50px;
-            border: 1px solid rgba(132, 146, 175, 0.3);
-            display: block;
-            width: 100px;
+            cursor: pointer;
             @media(max-width: 1220px) {
                 margin: 25px auto 0;
             }
@@ -382,6 +413,24 @@ p {
                 color: #0e1a35;
                 font-weight: 700;
                 letter-spacing: 0.5px;
+                padding: 15px 76px;
+                border: 1px solid rgba(132, 146, 175, 0.3);
+                border-radius: 50px;
+                display: block;
+                width: 100px;
+                margin: 0 auto;
+                &:hover {
+                    background-color: #5584ff;
+                    color: #fff;
+                    border: 1px solid #5584ff;
+                    transition: 0.3s;
+                }
+                &:active {
+                    background-color: #4470dd;
+                    color: #fff;
+                    border: 1px solid #4470dd;
+                    transition: 0.3s;
+                }
             }
         }
     }
@@ -1131,6 +1180,18 @@ p {
                     display: none;
                 }
             }
+            &:hover {
+                background-color: transparent;
+                color: #5584ff;
+                border: 1px solid #5584ff;
+                transition: 0.1s;
+            }
+            &:active {
+                background-color: #4470dd;
+                color: #fff;
+                border: 1px solid #4470dd;
+                transition: 0.3s;
+            }
         }
     }
 }
@@ -1190,6 +1251,20 @@ p {
         display: flex;
         width: 391px;
         justify-content: space-between;
+        & a {
+            text-decoration: none;
+            color: #fff;
+            padding: 15px 0px;
+            cursor: pointer;
+            &:hover {
+                color: #5584ff;
+                transition: 0.3s;
+            }
+            &:active {
+                color: #4470dd;
+                transition: 0.3s;
+            }
+        }
         @media(max-width: 780px) {
             flex-flow: column;
             justify-content: center;
@@ -1202,6 +1277,14 @@ p {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            & img:hover {
+                fill: red;
+                transition: 0.3s;
+            }
+            & img:active {
+                color: #4470dd;
+                transition: 0.3s;
+            }
         }
     }
 }
