--- a/src/views/index.html
+++ b/src/views/index.html
@@ -228,9 +228,9 @@
                         <p>© 2016 Merkury All Right Reserved</p>  
                     </div>
                     <div class="block-footer__menu">
-                        <p>Pricing</p>
-                        <p>Blog</p>
-                        <p>Contact</p>
+                        <a href="#">Pricing</a>
+                        <a href="#">Blog</a>
+                        <a href="#">Contact</a>
                         <div class="block-footer__menu--social">
                             <a href="#"><img src="../img/svg/facebook.svg" width="9" height="17" alt=""></a>
                             <a href="#"><img src="../img/svg/twitter.svg" width="18" height="16" alt=""></a>
